# gwen

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.md  boot.gw  boot.p  build.mk  cat.c  cat.gw  cat.p  core.c  eq.c  equal.c  ev.c  eval.c  gc.c  glisp.js  gw.c  gw.h  gwen.c  gwen.h  gwen.js  hash.c  i.h  index.html  install.mk  lcat.c  main.c  main.gw  manpage.gw  mem.c  misc.mk  num.c  p.1  p.c  p.ftdetect.vim  p.h  p.js  p.syntax.vim  (+19 more)
c/: Makefile  gw.c  gw.h  gwen.c  gwen.h  i.h  main.c  p.c
doc/: gw.1.md  p.1.md
esp/: .gitignore
f/: cb.c  cb.h
font/: README.md
g/: Makefile  PKGBUILD  boot.g  c.c  core.c  data.c  eq.c  eql.c  ev.c  eval.c  font.h  g.c  g.h  gc.c  hash.c  i.h  ini.c  io.c  mem.c  num.c  read.c  rw.c  str.c  sym.c  tab.c  tbl.c  two.c  vm.c  write.c
h/: Makefile  README.md  boot.h.g  glsh  lcat.c  lcat.g  lcat.sed  main.c  manpage.g  manpage.mi  repl.g  sed.g  sys.c  sys.h  tui.c
host/: Makefile  lcat.c  main.c  main.gw  manpage.gw  sys.c  sys.h
js/: gw.js  gw_test.js  package.json
k/: .gitignore  Makefile  ccrt.c  k.h  libc.c  log.c  log.h  main.c  mem.c  sys.h
lib/: pre.gw
libc/: lib.c  libc_internal.h
lisp/: boot.gw  boot.p  main.gw  manpage.gw
misc/: PKGBUILD
os/: GNUmakefile  Makefile  README.md  core.c.d  equal.c.d  eval.c.d  hash.c.d  iso.mk  limine.conf  run.mk
pd/: .gitignore  CMakeLists.txt  Makefile  README.md  font.c  font.h  main.c  sys.c  sys.h
pico/: .gitignore  CMakeLists.txt  README.md
pico/hello_world/serial/: CMakeLists.txt  hello_serial.c
share/: hash.c  write.c
src/: Makefile  boot.gw  boot.mi  (+15 more)
(+106 files in other folders)
